<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
   >

    <TextView
        android:id="@+id/txv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="init"/>

    <EditText
        android:id="@+id/editTextInput"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        android:onClick="startService"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:onClick="stopService"/>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_xleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_xright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"/>


    <ImageView
        android:layout_width="@dimen/_21sdp"
        android:layout_height="@dimen/_25sdp"
        android:id="@+id/view_logos"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/g_top"
        android:src="@drawable/ic_data_usage_"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:contentPadding="@dimen/_8sdp"
        style="@style/BASE_CARD_1"
        android:layout_marginTop="@dimen/_20sdp"


        android:id="@+id/foreground_card"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/view_logos"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/security_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/_6sdp"

            style="@style/Base_TXV_3"
            android:text="@string/foreground_service"
            />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:contentPadding="@dimen/_8sdp"
        style="@style/BASE_CARD_1"
        android:layout_marginTop="5dp"


        android:id="@+id/intentServiceCard"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/foreground_card"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/_6sdp"

            style="@style/Base_TXV_3"
            android:text="@string/intent_service"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:contentPadding="@dimen/_8sdp"
        style="@style/BASE_CARD_1"
        android:layout_marginTop="5dp"


        android:id="@+id/jobIntentServiceCard"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/intentServiceCard"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_lifecycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/_6sdp"

            style="@style/Base_TXV_3"
            android:text="@string/job_intent_service"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:contentPadding="@dimen/_8sdp"
        style="@style/BASE_CARD_1"
        android:layout_marginTop="5dp"


        android:id="@+id/jobSechularCard"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/jobIntentServiceCard"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_videoplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/_6sdp"

            style="@style/Base_TXV_3"
            android:text="@string/job_schedular"
            />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:contentPadding="@dimen/_8sdp"
        style="@style/BASE_CARD_1"
        android:layout_marginTop="5dp"


        android:id="@+id/download_card"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/jobSechularCard"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/download_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/_6sdp"

            style="@style/Base_TXV_3"
            android:text="@string/download"
            />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
    

</LinearLayout>